--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,8 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ec2-user/cicd-test
+    destination: /home/ec2-user/cicd/cicd-test
+    overwrite: true
 hooks:
   BeforeInstall:
     - location: server/scripts/before_install.sh
