--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,15 @@ phases:
     commands:
       - cd client
       - npm install
+
+  pre_build:
+    commands:
+      - echo "Fetching environment variables from Parameter Store"
+      - export REACT_APP_API_STRING=$(aws ssm get-parameter --name "REACT_APP_API_STRING" --with-decryption --query Parameter.Value --output text)
+      - export REACT_APP_ACCESS_KEY=$(aws ssm get-parameter --name "REACT_APP_ACCESS_KEY" --with-decryption --query Parameter.Value --output text)
+      - export REACT_APP_SECRET_ACCESS_KEY=$(aws ssm get-parameter --name "REACT_APP_SECRET_ACCESS_KEY" --with-decryption --query Parameter.Value --output text)
+      - export REACT_APP_VERSION=$(aws ssm get-parameter --name "REACT_APP_VERSION" --with-decryption --query Parameter.Value --output text)
+
   build:
     commands:
       - npm run build
