--- a/client/package.json
+++ b/client/package.json
@@ -6,20 +6,19 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@ilovepdf/ilovepdf-nodejs": "^0.3.0",
     "@mui/icons-material": "^5.16.1",
     "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.5",
     "@mui/styles": "^5.16.5",
     "@mui/x-date-pickers": "^7.10.0",
+    "@testing-library/dom": "^7.31.2",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.49.1",
     "aws-sdk": "^2.1475.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
-    "browser-image-compression": "^2.0.2",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "formik": "^2.4.6",
@@ -32,7 +31,6 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
-    "react-tsparticles": "^2.12.2",
     "sass": "^1.77.4",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5",
