--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,11 +6,11 @@ phases:
       nodejs: 18.x
     commands:
       - cd client
-      - yarn install --frozen-lockfile
+      - npm install --legacy-peer-deps
 
   build:
     commands:
-      - yarn build
+      - npm run build
 
 artifacts:
   base-directory: client/build
