--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Ignore certificates
+*.crt
+*.key
+*.pem
+
 # Ignore node_modules in both client and server directories
 client/node_modules/
 server/node_modules/
